force-app/main/default/objects/Candidate_Info__c/Candidate_Info__c.object-meta.xml
<CustomObject>
    <label>Candidate Info</label>
    <nameField>
        <displayFormat>CD-{00000}</displayFormat>
        <label>Candidate Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>