force-app/main/default/objects/Candidate_Info__c/fields/current_employer_s_name__c.field-meta.xml
<CustomField>
    <fullName>current_employer_s_name__c</fullName>
    <label>current employer’s name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>