force-app/main/default/objects/Candidate_Info__c/fields/currently_employed__c.field-meta.xml
<CustomField>
    <fullName>currently_employed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>currently employed</label>
    <type>Checkbox</type>
</CustomField>