force-app/main/default/objects/Candidate_Info__c/fields/Education_details__c.field-meta.xml
<CustomField>
    <fullName>Education_details__c</fullName>
    <label>Education details</label>
    <type>TextArea</type>
</CustomField>