force-app/main/default/objects/Candidate_Info__c/fields/Present_address_city__c.field-meta.xml
<CustomField>
    <fullName>Present_address_city__c</fullName>
    <label>Present address city</label>
    <type>TextArea</type>
</CustomField>