force-app/main/default/objects/Candidate_Info__c/fields/Present_address_postal_code__c.field-meta.xml
<CustomField>
    <fullName>Present_address_postal_code__c</fullName>
    <label>Present address postal code</label>
    <type>TextArea</type>
</CustomField>