force-app/main/default/objects/Candidate_Info__c/fields/Present_address_street__c.field-meta.xml
<CustomField>
    <fullName>Present_address_street__c</fullName>
    <label>Present address street</label>
    <type>TextArea</type>
</CustomField>