force-app/main/default/objects/Candidate_Info__c/fields/Present_country__c.field-meta.xml
<CustomField>
    <fullName>Present_country__c</fullName>
    <label>Present country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>