force-app/main/default/objects/Candidate_Info__c/fields/Standard_name__c.field-meta.xml
<CustomField>
    <fullName>Standard_name__c</fullName>
    <displayFormat>CD-{0000}</displayFormat>
    <label>Standard name</label>
    <type>AutoNumber</type>
</CustomField>