force-app/main/default/objects/Candidate_Info__c/validationRules/DOB_restrict.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_restrict</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_birth__c  &lt;=   DATE(2006,12,05)</errorConditionFormula>
    <errorMessage>Date of birth should be less than year 2006.</errorMessage>
</ValidationRule>